BA-907 // Fix labels on opportunity list and detail pages
Global styling (bc-devx.less):
- remove larger font styling for label-location

Opportunity list page:
- wrap skills in their own <div> so that skills appear on a new line on the card
- wrap on-site requirements in their own <label> to prevent the text overflowing the width of the card in mobile view
- change icon for CWU label to fa-tag, to match the descriptions of CWU/SWU at the top of the list page

CWU Opportunity detail page:
- update skills label class to label-skill to match the list page (dark orange)
- add list heading for "Required Skills: and wrap the skills labels in their own div so they display on their own line

--- a/public/less/include/bc-devx.less
+++ b/public/less/include/bc-devx.less
@@ -1140,7 +1140,6 @@ form-title {
   background: transparent;
   color: @gray-dark;
   font-weight: bold;
-  font-size: .9em;
 }
 
 .label-watching {
